# NonLocalPooling

./: .gitignore  LICENSE  README.md  nonlocalpooling.py  setup.cfg
src/nonlocalpooling/: pool.py
test/: test.py
