[metadata]
name = nonlocalpooling
version = 2.0.0
author = Hongyi Wang
author_email = whongyi@zju.edu.cn
description = Global-Wise Pooling Layers for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dootmaan/NonLocalPooling
project_urls =
    Bug Tracker = https://github.com/Dootmaan/NonLocalPooling/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src